--- a/style.css
+++ b/style.css
@@ -164,4 +164,13 @@ html, body {
     margin-right: 10px;
     border-radius: 3px;
   }
-  
+
+
+  .mapboxgl-popup {
+    max-width: 400px;
+    font:
+        12px/20px 'Helvetica Neue',
+        Arial,
+        Helvetica,
+        sans-serif;
+}
